exports[`invalid(1): {\"bin\": \"invalid.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "invalid.js"}

`;

exports[`invalid(1): {\"bin\": \"invalid.js\"} 2`] = `

Message:
> 1 | {"bin": "invalid.js"}
    |         ^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(10): {\"bin\": \"inside.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "inside.js"}

`;

exports[`invalid(10): {\"bin\": \"inside.js\"} 2`] = `

Message:
> 1 | {"bin": "inside.js"}
    |         ^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(11): {\"bin\": \"invalid.cjs\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "invalid.cjs"}

`;

exports[`invalid(11): {\"bin\": \"invalid.cjs\"} 2`] = `

Message:
> 1 | {"bin": "invalid.cjs"}
    |         ^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(12): {\"bin\": \"invalid.mjs\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "invalid.mjs"}

`;

exports[`invalid(12): {\"bin\": \"invalid.mjs\"} 2`] = `

Message:
> 1 | {"bin": "invalid.mjs"}
    |         ^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(13): {\"bin\": \"valid.js\", \"bin\": \"invalid.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "valid.js", "bin": "invalid.js"}

`;

exports[`invalid(13): {\"bin\": \"valid.js\", \"bin\": \"invalid.js\"} 2`] = `

Message:
> 1 | {"bin": "valid.js", "bin": "invalid.js"}
    |                            ^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(14): {\"bin\": {\"foo\": \"valid.js\", \"foo\": \"invalid.js\"}} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": {"foo": "valid.js", "foo": "invalid.js"}}

`;

exports[`invalid(14): {\"bin\": {\"foo\": \"valid.js\", \"foo\": \"invalid.js\"}} 2`] = `

Message:
> 1 | {"bin": {"foo": "valid.js", "foo": "invalid.js"}}
    |                                    ^^^^^^^^^^^^ The \`bin\` file for \`foo\` must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(15): {\"bin\": \"arguments.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "arguments.js"}

`;

exports[`invalid(15): {\"bin\": \"arguments.js\"} 2`] = `

Message:
> 1 | {"bin": "arguments.js"}
    |         ^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(16): {\"bin\": \"tab-terminator.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "tab-terminator.js"}

`;

exports[`invalid(16): {\"bin\": \"tab-terminator.js\"} 2`] = `

Message:
> 1 | {"bin": "tab-terminator.js"}
    |         ^^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(17): {\"bin\": \"too-long.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "too-long.js"}

`;

exports[`invalid(17): {\"bin\": \"too-long.js\"} 2`] = `

Message:
> 1 | {"bin": "too-long.js"}
    |         ^^^^^^^^^^^^^ The \`bin\` file must have a shebang of at most 255 bytes; Linux truncates a longer one.

`;

exports[`invalid(18): {\"bin\": {\"tool\": \"too-long.js\"}} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": {"tool": "too-long.js"}}

`;

exports[`invalid(18): {\"bin\": {\"tool\": \"too-long.js\"}} 2`] = `

Message:
> 1 | {"bin": {"tool": "too-long.js"}}
    |                  ^^^^^^^^^^^^^ The \`bin\` file for \`tool\` must have a shebang of at most 255 bytes; Linux truncates a longer one.

`;

exports[`invalid(19): {\"bin\": \"trailing-space-eof.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "trailing-space-eof.js"}

`;

exports[`invalid(19): {\"bin\": \"trailing-space-eof.js\"} 2`] = `

Message:
> 1 | {"bin": "trailing-space-eof.js"}
    |         ^^^^^^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(2): {\"bin\": \"wrong-shebang.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "wrong-shebang.js"}

`;

exports[`invalid(2): {\"bin\": \"wrong-shebang.js\"} 2`] = `

Message:
> 1 | {"bin": "wrong-shebang.js"}
    |         ^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(3): {\"bin\": \"wrong-interpreter.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "wrong-interpreter.js"}

`;

exports[`invalid(3): {\"bin\": \"wrong-interpreter.js\"} 2`] = `

Message:
> 1 | {"bin": "wrong-interpreter.js"}
    |         ^^^^^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(4): {\"bin\": \"wrong-interpreter-prefix.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "wrong-interpreter-prefix.js"}

`;

exports[`invalid(4): {\"bin\": \"wrong-interpreter-prefix.js\"} 2`] = `

Message:
> 1 | {"bin": "wrong-interpreter-prefix.js"}
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(5): {\"bin\": \"crlf.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "crlf.js"}

`;

exports[`invalid(5): {\"bin\": \"crlf.js\"} 2`] = `

Message:
> 1 | {"bin": "crlf.js"}
    |         ^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(6): {\"bin\": \"bom.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "bom.js"}

`;

exports[`invalid(6): {\"bin\": \"bom.js\"} 2`] = `

Message:
> 1 | {"bin": "bom.js"}
    |         ^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(7): {\"bin\": \"invalid-no-newline.js\"} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": "invalid-no-newline.js"}

`;

exports[`invalid(7): {\"bin\": \"invalid-no-newline.js\"} 2`] = `

Message:
> 1 | {"bin": "invalid-no-newline.js"}
    |         ^^^^^^^^^^^^^^^^^^^^^^^ The \`bin\` file must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(8): {\"bin\": {\"foo\": \"invalid.js\"}} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": {"foo": "invalid.js"}}

`;

exports[`invalid(8): {\"bin\": {\"foo\": \"invalid.js\"}} 2`] = `

Message:
> 1 | {"bin": {"foo": "invalid.js"}}
    |                 ^^^^^^^^^^^^ The \`bin\` file for \`foo\` must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(9): {\"bin\": {\"foo\": \"invalid.js\", \"bar\": \"wrong-shebang.js\"}} 1`] = `

[Input 'test/fixtures/require-bin-shebang/package.json']
  1 | {"bin": {"foo": "invalid.js", "bar": "wrong-shebang.js"}}

`;

exports[`invalid(9): {\"bin\": {\"foo\": \"invalid.js\", \"bar\": \"wrong-shebang.js\"}} 2`] = `

Message:
> 1 | {"bin": {"foo": "invalid.js", "bar": "wrong-shebang.js"}}
    |                 ^^^^^^^^^^^^ The \`bin\` file for \`foo\` must start with a \`#!/usr/bin/env node\` shebang.

`;

exports[`invalid(9): {\"bin\": {\"foo\": \"invalid.js\", \"bar\": \"wrong-shebang.js\"}} 3`] = `

Message:
> 1 | {"bin": {"foo": "invalid.js", "bar": "wrong-shebang.js"}}
    |                                      ^^^^^^^^^^^^^^^^^^ The \`bin\` file for \`bar\` must start with a \`#!/usr/bin/env node\` shebang.

`;
